--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <div class="container">
         <div class="left-section">
             <div class="logo-container">
-                <img src="https://media.discordapp.net/attachments/1261422711243280478/1407435676231663728/vadrifts_v_with_glow_cropped.png?ex=68a6c0de&is=68a56f5e&hm=df1651a145e6cf47ef11b93b1c396b23950305d2b13513bde248137eb8715e36&=&format=webp&quality=lossless" 
+                <img src="https://imgur.com/a/x7gThFx" 
                      alt="Vadrifts Logo" 
                      class="vadrifts-logo">
                 <h1 class="brand-name">Vadrifts</h1>
