--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <div class="container">
         <div class="left-section">
             <div class="logo-container">
-                <img src="https://imgur.com/a/x7gThFx" 
+                <img src="https://i.imgur.com/ePueN25.png" 
                      alt="Vadrifts Logo" 
                      class="vadrifts-logo">
                 <h1 class="brand-name">Vadrifts</h1>
