--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/>
                     </svg>
                     <div class="feature-content">
-                        <div class="feature-title">Zenith access, Bot access, Image perms</div>
-                        <div class="feature-desc">Get Access to the Best Executor that's Undetected and paid for FREE! And get access to our discord obfuscation/dump bot in our Discord Server + Get a cool role!</div>
+                        <div class="feature-title">Bot access, Image perms, Cool role</div>
+                        <div class="feature-desc">Get access to our discord obfuscation/dump bot in our Discord Server + Get a cool role with tons of permissions!! (including image perms)</div>
                     </div>
                 </li>
             </ul>
